--- a/app/templates/home/secret.html
+++ b/app/templates/home/secret.html
@@ -41,8 +41,8 @@
                                     </div>
                                     <label for="project_id">Scope:</label>
                                     <select class="form-control" id="project_id" name="project_id">
-                                        <option value="">ALL</option>
-                                        <option value="project">PROJECT</option>
+                                        <option value="project">Current project</option>
+                                        <option value="">All projects</option>
                                     </select>
 
                                     <label for="value" class="mt-2">Value:</label>
