--- a/app/templates/home/prompts.html
+++ b/app/templates/home/prompts.html
@@ -84,9 +84,15 @@
                 </div>
                 <div class="mt-3">
                   <label>Scope</label>
+                  <div class="tooltip-container">
+                    <span class="fa-regular fa-circle-question me-2 mt-1"></span>
+                    <div class="tooltip-content">
+                        Scope determines secret visibility: "ALL" makes it visible across all projects, while "Project" restricts access to the current project.
+                    </div>
+                  </div>
                   <select class="form-select" id="project_id" name="project_id">
-                    <option value="">All projects</option>
                     <option value="project">Current project</option>
+                    <option value="">All projects</option>
                   </select>
                 </div>
                 <div class="mt-3">
