Fixed confluence issues and added better error handeling

--- a/app/templates/home/template.html
+++ b/app/templates/home/template.html
@@ -340,6 +340,7 @@
                             selectedSystemPrompt: null,
                             idCounter: 1,
                             commonVariables: [
+                                { name: '${report_timestamp}', description: 'Timestamp when report was generated.' },
                                 { name: '${current_test_title}', description: 'Name of the current test.' },
                                 { name: '${current_duration}', description: 'Duration of the current test in seconds.' },
                                 { name: '${current_start_time}', description: 'Start time of the current test.' },
