--- a/app/templates/home/graphs.html
+++ b/app/templates/home/graphs.html
@@ -115,14 +115,14 @@
           <div class="modal-content">
             <div class="modal-header">
                 <h2 class="mb-0">Graphs
-                    <div class="tooltip-container">
+                    <span class="tooltip-container">
                       <a href="https://perforge.app/docs/configuration/graphs" target="_blank">
                           <span class="fa-regular fa-circle-question me-2 mt-2"></span>
                       </a>
-                      <div class="tooltip-content" style="font-size: 16px;">
+                      <span class="tooltip-content" style="font-size: 16px;">
                           Click to learn more
-                      </div>
-                    </div>
+                      </span>
+                    </span>
                 </h2>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
@@ -147,25 +147,33 @@
                       </select>
                   </div>
                   <div class="mt-3">
-                      <label>View panel</label>
+                      <label>View panel
+                        <span class="tooltip-container">
+                            <span class="fa-regular fa-circle-question me-2 mt-2"></span>
+                            <span class="tooltip-content">
+                                The view panel is a unique identifier for each Grafana panel. To get this ID, simply open the panel in view mode and you can find the ID in the URL (viewPanel=)
+                            </span>
+                        </span>
+                      </label>
                       <input type="text" class="form-control" id="view_panel" name="view_panel" placeholder="e.g. 1">
                   </div>
                   <div class="mt-3">
-                      <label>Panel height</label>
+                      <label>Expected graph height</label>
                       <input type="text" class="form-control" id="height" name="height" placeholder="e.g. 500">
                   </div>
                   <div class="mt-3">
-                      <label>Panel width</label>
+                      <label>Expected graph width</label>
                       <input type="text" class="form-control" id="width" name="width" placeholder="e.g. 1000">
                   </div>
                   <div class="mt-3">
-                      <label class="mt-3">Custom vars (optional)</label>
-                      <div class="tooltip-container">
-                          <span class="fa-regular fa-circle-question me-2 mt-2"></span>
-                          <div class="tooltip-content">
-                              You can add additional custom variables to draw graphs with these variables. For example, use the following format: &var-varname=varvalue
-                          </div>
-                      </div>
+                      <label class="mt-3">Custom vars (optional)
+                        <span class="tooltip-container">
+                            <span class="fa-regular fa-circle-question me-2 mt-2"></span>
+                            <span class="tooltip-content">
+                                You can add additional custom variables to draw graphs with these variables. For example, use the following format: &var-varname=varvalue
+                            </span>
+                        </span>
+                      </label>
                       <input type="text" class="form-control" id="custom_vars" name="custom_vars" placeholder="e.g. &var-varname=varvalue">
                   </div>
                   <div class="mt-3">
