--- a/app/templates/integrations/grafana.html
+++ b/app/templates/integrations/grafana.html
@@ -15,14 +15,14 @@
                         <div class="card-header">
                             <div class="justify-content-between align-items-center">
                                 <h4 class="mb-0">Grafana
-                                    <div class="tooltip-container">
+                                    <span class="tooltip-container">
                                       <a href="https://perforge.app/docs/configuration/integrations#grafana" target="_blank">
                                           <span class="fa-regular fa-circle-question me-2 mt-2"></span>
                                       </a>
-                                      <div class="tooltip-content" style="font-size: 16px;">
+                                      <span class="tooltip-content" style="font-size: 16px;">
                                           Click to learn more
-                                      </div>
-                                    </div>
+                                      </span>
+                                    </span>
                                 </h4>
                             </div>
                         </div>
@@ -48,10 +48,18 @@
                                     <div id="new_secret_fields" style="display: none; width: 100%;">
                                         <label for="new_secret_name" class="mt-2" style="display: block; text-align: center;">Secret Name:</label>
                                         <input type="text" id="new_secret_name" class="form-control", placeholder="e.g. GRAFANA_TOKEN">
-                                        <label for="new_secret_scope" class="mt-2" style="display: block; text-align: center;">Scope:</label>
+                                        <label for="new_secret_scope" class="mt-2" style="display: block; text-align: center;">
+                                            Scope:
+                                            <span class="tooltip-container d-inline-block me-1">
+                                                <span class="fa-regular fa-circle-question"></span>
+                                                <span class="tooltip-content">
+                                                    Scope determines secret visibility: "ALL" makes it visible across all projects, while "Project" restricts access to the current project.
+                                                </span>
+                                            </span>
+                                        </label>
                                         <select class="form-control" id="new_secret_scope">
-                                            <option value="">ALL</option>
-                                            <option value="project">PROJECT</option>
+                                            <option value="project">Current project</option>
+                                            <option value="">All projects</option>
                                         </select>
                                         <label for="new_secret_value" class="mt-2" style="display: block; text-align: center;">Secret Value:</label>
                                         <input type="password" id="new_secret_value" class="form-control", placeholder="e.g. my-super-secret-token">
@@ -63,22 +71,24 @@
                                     <label for="org_id" class="input-label mt-2">Organization ID:</label>
                                     {{ form.org_id(id='org_id', class_='form-control', placeholder="e.g. 1") }}
 
-                                    <div class="tooltip-container">
-                                      <span class="fa-regular fa-circle-question me-2 mt-2"></span>
-                                      <div class="tooltip-content">
-                                        The variable name on dashboard used to select the test title for querying the results. 'testTitle' is default.
-                                      </div>
-                                    </div>
-                                    <label for="test_title" class="input-label mt-2">Test title tag name:</label>
+                                    <label for="test_title" class="input-label mt-2">Test title tag name:
+                                        <span class="tooltip-container">
+                                            <span class="fa-regular fa-circle-question me-2 mt-2"></span>
+                                            <span class="tooltip-content">
+                                              The variable name on dashboard used to select the test title for querying the results. 'testTitle' is default.
+                                            </span>
+                                        </span>
+                                    </label>
                                     {{ form.test_title(id='test_title', class_='form-control', placeholder="e.g. testTitle") }}
 
-                                    <div class="tooltip-container">
-                                      <span class="fa-regular fa-circle-question me-2 mt-2"></span>
-                                      <div class="tooltip-content">
-                                        The variable name on dashboard used to select the baseline test title for querying the results. It is used on comparison dashboard. 'baseline_testTitle' is default.
-                                      </div>
-                                    </div>
-                                    <label for="baseline_test_title" class="input-label mt-2">Baseline test title tag name:</label>
+                                    <label for="baseline_test_title" class="input-label mt-2">Baseline test title tag name:
+                                        <span class="tooltip-container">
+                                            <span class="fa-regular fa-circle-question me-2 mt-2"></span>
+                                            <span class="tooltip-content">
+                                              The variable name on dashboard used to select the baseline test title for querying the results. It is used on comparison dashboard. 'baseline_testTitle' is default.
+                                            </span>
+                                        </span>
+                                    </label>
                                     {{ form.baseline_test_title(id='baseline_test_title', class_='form-control', placeholder="e.g. baseline_testTitle") }}
 
                                     <label for="is_default" class="input-label mt-2">Is Default:</label>
